# RyzenMobileLimiter

./: .gitignore  Makefile  README.md  ansi.py  daemon.py  parse_args.py  pyproject.toml  ryzenm-limit  ryzenm-limit.conf
config/: ryzenm-limit.conf
ryzenm_limit/: daemon.py  management.py  parse_args.py  runtime_check.py
src/: daemon.py  management.py  parse_args.py  runtime_check.py
src/ryzenm_limit/: __init__.py  __main__.py  daemon.py  parse_args.py  runtime_check.py
systemd/: ryzenm-limit.service
